[project]
name = "RTbehavior"
description = "Residence Time distribution and behavior analyis."
requires-python = ">=3.8"
license = {file = "LICENSE.txt"}
authors = [
    {name = "Zafer Kosar"}
]
maintainers = [
    {name = "Zafer Kosar", email = "zafermolbio@gmail.com"}
]

readme = {file = "README.md", content-type="text/markdown"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]

dependencies = [
    "numpy==1.26.4",
    "scipy",
    "statannot",
    "lets_plot==4.4.0",
    "polars >= 1.0.0",
    "pandas >= 1.5.0, < 2",
    "seaborn == 0.12.2",
    "matplotlib >= 3.6.0",
    "cairosvg",
    "pyarrow",

]